<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todo Stalker</string>
    <string name="title_activity_add_to_do">AddToDo</string>
    <string name="action_settings">Settings</string>
    <string name="noteText">Todo Note</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="saveBtn">Save</string>
    <string name="pick_date">Pick a Date</string>
    <string name="cancelBtnText">Cancel</string>
    <string name="categSpinnerPromptTxt">Select a category</string>
    <string name="actn1">Preferences</string>
    <string name="actn2">Add TODO</string>
    <string name="actn3">View Map</string>
    <string name="actn4">List TODOs</string>
    <string name="title_activity_list_todo">ListTodoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map_all_todos">MapAllTODOs</string>
    <string name="placeImage">Image for the Place</string>
    <string name="title_activity_notification">Todo Alerts</string>
    <string name="get_direction">Get Directions</string>

</resources>
