<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#0099cc"
    tools:context=".AddToDoActivity" >

    <Spinner
        android:id="@+id/subCategorySpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/categorySpinner"
        android:layout_below="@+id/categorySpinner"
        android:layout_marginTop="29dp"
        style="@color/white" />
    
    <Spinner
        android:id="@+id/categorySpinner"
        style="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:prompt="@string/categSpinnerPromptTxt" />

    <EditText
        android:id="@+id/notesTxtBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subCategorySpinner"
        android:layout_alignRight="@+id/subCategorySpinner"
        android:layout_below="@+id/subCategorySpinner"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/noteText"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saveButton"
        android:layout_alignBottom="@+id/saveButton"
        android:layout_alignRight="@+id/notesTxtBox"
        android:background="@color/white"
        android:onClick="cancelOnClick"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:text="@string/cancelBtnText"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/notesTxtBox"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:onClick="saveTodo"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:text="@string/saveBtn"
        android:textColor="@color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancelButton"
        android:layout_alignLeft="@+id/saveButton"
        android:layout_alignRight="@+id/cancelButton"
        android:layout_marginBottom="27dp"
        android:background="@color/white"
        android:onClick="showDatePickerDialog"
        android:text="@string/pick_date"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/addTodoHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:shadowDx="2.0"
        android:shadowDy="2.0"
        android:text="Add a new Todo"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>
