<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1DA9DA"
    tools:context="com.stalker.HomeScreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

<com.echo.holographlibrary.PieGraph
    android:id="@+id/graph"
    android:layout_width="wrap_content"
    android:layout_height="275dp"
    android:layout_marginTop="55dp"
    android:paddingTop="0dp"
    app:innerCircleRatio="200"
    app:slicePadding="1dip" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:layout_gravity="bottom" >

            <TableRow
                android:id="@+id/TableRow01"
                style="@style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF" >

		        <Button
		            android:id="@+id/Button01"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_margin="0dp"
		            android:layout_weight="1"
		            android:background="@android:color/transparent"
		            android:drawableLeft="@drawable/pencil32"
		            android:text="@string/actn2"
		            android:textColor="#1DA9DA"
		            android:fontFamily="sans-serif-light" />
		        
		        <Button
		            android:id="@+id/button1"
		            style="@style/ButtonBarButton"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_margin="0dp"
		            android:layout_weight="1"
		            android:background="#FDFCFC"
		            android:drawableLeft="@drawable/linedpapercheck32"
		            android:text="@string/actn4"
		            android:textColor="#1DA9DA"
		            android:fontFamily="sans-serif-light" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        style="@style/ButtonBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF" >

        <Button
            android:id="@+id/Button02"
            style="@style/ButtonBarButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#FDFCFC"
            android:drawableLeft="@drawable/mapiconbig"
            android:text="@string/actn3"
            android:textColor="#1DA9DA"
            android:fontFamily="sans-serif-light" />

        <Button
            android:id="@+id/button2"
            style="@style/ButtonBarButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#FDFDFD"
            android:drawableLeft="@drawable/gear32"
            android:minWidth="48dp"
            android:text="@string/actn1"
            android:textColor="#1DA9DA"
            android:fontFamily="sans-serif-light" />

    </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Todo Stalker!"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textColorLink="@color/white" 
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:textSize="30sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"/>

    </FrameLayout>

</FrameLayout>